--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
       <p>
         a <a href="/project/" class="textUnderline">UI&#47;UX</a> designer with an <a
           href="/project/" class="textUnderline">architectural design </a>background. Passionate
-        about translating complex business requirements into compelling user experiences. 
+        about translating complex business requirements into compelling user experiences.
       </p>
       <p> I built and update this website myself from scratch using HTML/CSS/JS deployed on AWS S3.
         Please visit my <a href="https://github.com/vicky-wyq" class="textUnderline"
@@ -210,157 +210,263 @@
 
   </div>
   <!--intro-->
-    <!--  -->
-    <div class="wrapper">
-      <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-        <div class="Grid-cell">
-          <div class="element">
-            <div class="Grid">
-              <p class="tArrow">What I have been working on  </p>
-              <img class="se-arrow" src="icon/arrow-se.svg" alt="se-arrow">
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="blankHS"></div>
-      <div class="Grid Grid--gutters Grid--cols-3 ">
-        <div class="Grid-cell">
-          <div class="element">
-            <div class="elementInner ShadowBox">
-              <h4 class="allCaps">b2b Web app (SaaS)</h4>
-              <div class="lineHorizS"></div>
-              <div class="blankHXS"></div>
-  
-              <h5> <strong> Solving problems by understand user &#38; product
-                </strong> </h5>
-  
-              <ul>
-                <li> Understand users </li>
-                <li> Understand business &#38; product</li>
-              </ul>
-              <div class="blankHXS"></div>
-  
-            </div>
-          </div>
-        </div>
-        <div class="Grid-cell">
-          <div class="element">
-            <div class="elementInner ShadowBox">
-              <h4 class="allCaps">The way to integrate </h4>
-              <div class="lineHorizS"></div>
-              <div class="blankHXS"></div>
-  
-              <h5> <strong>Simplicity is the key “Less is More” </strong> </h5>
-  
-              <ul>
-                <li> Consider existing user flow</li>
-                <li> Thoughtful placement of design elements, eliminate redundancy </li>
-              </ul>
-              <div class="blankHXS"></div>
-  
-            </div>
-          </div>
-        </div>
-        <div class="Grid-cell">
-          <div class="element">
-            <div class="elementInner ShadowBox">
-              <h4 class="allCaps">The way to built </h4>
-              <div class="lineHorizS"></div>
-              <div class="blankHXS"></div>
-  
-              <h5> <strong> Quality of design &#38; Implement
-                </strong> </h5>
-              <ul>
-                <li> Undersdand design system in Figma</li>
-                <li> Reuse the existing components</li>
-                <li> Standardized grid system</li>
-  
-              </ul>
-              <div class="blankHXS"></div>
-  
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!--   -->
+
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
-  <!-- Design Philosophy -->
+  <!--  -->
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
       <div class="Grid-cell">
         <div class="element">
           <div class="Grid">
-            <p class="tArrow">Design Philosophy</p>
+            <p class="tArrow">WhatI have been working on </p>
             <img class="se-arrow" src="icon/arrow-se.svg" alt="se-arrow">
           </div>
         </div>
       </div>
     </div>
     <div class="blankHS"></div>
-    <div class="Grid Grid--gutters Grid--cols-3 ">
+    <div class="Grid Grid--gutters Grid--cols-2 ">
       <div class="Grid-cell">
         <div class="element">
-          <div class="elementInner ShadowBox">
-            <h4 class="allCaps">The way to use</h4>
+          <div class="elementInner ShadowBox heightM">
+            <h4 class=" colorBlack"><span class="allCaps"> web app</span> (SaaS)</h4>
             <div class="lineHorizS"></div>
             <div class="blankHXS"></div>
 
-            <h5> <strong> Solving problems by understand user &#38; product
-              </strong> </h5>
-
             <ul>
-              <li> Understand users </li>
-              <li> Understand business &#38; product</li>
+              <li>Book appointment</li>
+              <li>Services &#38; promotions</li>
+              <li>Team management
+                <ul>
+                  <li>Availability &#38; capacity</li>
+                  <li>Team member account</li>
+                </ul>
+              </li>
+              <li>Payment and tip</li>
+              <li>Command center</li>
+
             </ul>
-            <div class="blankHXS"></div>
 
           </div>
         </div>
       </div>
+
       <div class="Grid-cell">
         <div class="element">
-          <div class="elementInner ShadowBox">
-            <h4 class="allCaps">The way to integrate </h4>
+          <div class="elementInner ShadowBox heightM">
+            <h4 class="allCaps colorBlack">End users&#39; website &#38; Mobile app </h4>
             <div class="lineHorizS"></div>
             <div class="blankHXS"></div>
-
-            <h5> <strong>Simplicity is the key “Less is More” </strong> </h5>
-
             <ul>
-              <li> Consider existing user flow</li>
-              <li> Thoughtful placement of design elements, eliminate redundancy </li>
-            </ul>
-            <div class="blankHXS"></div>
-
-          </div>
-        </div>
-      </div>
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="elementInner ShadowBox">
-            <h4 class="allCaps">The way to built </h4>
-            <div class="lineHorizS"></div>
-            <div class="blankHXS"></div>
-
-            <h5> <strong> Quality of design &#38; Implement
-              </strong> </h5>
-            <ul>
-              <li> Undersdand design system in Figma</li>
-              <li> Reuse the existing components</li>
-              <li> Standardized grid system</li>
+              <li> Book appointment</li>
+              <li> User account</li>
+              <li> Add pets</li>
+              <li> Payment</li>
+              <li> Notification</li>
+              <li> Responsive design</li>
 
             </ul>
-            <div class="blankHXS"></div>
 
           </div>
         </div>
       </div>
     </div>
   </div>
-  <!-- Design Philosophy -->
+  <!--   -->
+  <div class="blankHM"></div>
+  <hr>
+  <div class="blankHM"></div>
+  <!-- highlight -->
+  <div class="wrapper">
+    <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="Grid">
+            <p class="tArrow">My highlight </p>
+            <img class="se-arrow" src="icon/arrow-se.svg" alt="se-arrow">
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="blankHS"></div>
+    <div class="Grid Grid--full">
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="elementInner ShadowBox ">
+            <h4 class="allCaps colorBlack">Simply flow and features, "less is more"</h4>
+            <div class="lineHorizS"></div>
+            <div class="blankHXS"></div>
+
+            <ul>
+              <li>Ideally, organize the features based on the frequency of use </li>
+              <li>Get rid of redundant flows if have time, keep the most frequently used flow easy
+                to reach and
+                update </li>
+
+
+            </ul>
+
+          </div>
+        </div>
+      </div>
+
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="elementInner ShadowBox ">
+            <h4 class="allCaps colorBlack">Always willing to improve design quality </h4>
+            <div class="lineHorizS"></div>
+            <div class="blankHXS"></div>
+            <ul>
+              <li> keep my design skills updated by observing, discussing, thinking, and doing
+                everyday</li>
+              <li> Always willing to learn design tools and basic programing language</li>
+
+
+            </ul>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- highlight -->
+  <div class="blankHM"></div>
+  <hr>
+  <div class="blankHM"></div>
+  <!-- looking for -->
+  <div class="wrapper">
+    <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="Grid">
+            <p class="tArrow">What I am looking for </p>
+            <img class="se-arrow" src="icon/arrow-se.svg" alt="se-arrow">
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="blankHS"></div>
+    <div class="Grid Grid--full">
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="elementInner ShadowBox ">
+            <h4 class="allCaps colorBlack">Open to all sizes and all types of company</h4>
+            <div class="lineHorizS"></div>
+            <div class="blankHXS"></div>
+
+            <ul>
+              <li>I do not have a strong preference for the company size or industry</li>
+              <li>I am still fairly new in UX design. Looking for the opportunity that I can learn
+                things from the team</li>
+
+
+            </ul>
+
+          </div>
+        </div>
+      </div>
+
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="elementInner ShadowBox ">
+            <h4 class="allCaps colorBlack">Clear product visions and goals </h4>
+            <div class="lineHorizS"></div>
+            <div class="blankHXS"></div>
+            <ul>
+              <li> keep the first version(MVP) simple and easy to use. able to get feedback from
+                customers and iterate </li>
+              <li> Ideally working on a launched product with a certain amount of customers </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- looking for -->
+  <div class="blankHM"></div>
+  <hr>
+  <div class="blankHM"></div>
+
+  <!-- Design principles -->
+  <div class="wrapper">
+    <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="Grid">
+            <p class="tArrow">Design principles </p>
+            <img class="se-arrow" src="icon/arrow-se.svg" alt="se-arrow">
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="blankHS"></div>
+    <div class="Grid Grid--full">
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="elementInner ShadowBox ">
+            <h4 class="allCaps colorBlack">Product </h4>
+            <div class="lineHorizS"></div>
+            <div class="blankHXS"></div>
+            <ul>
+              <li> Design MVP, testing, launch, learn from customers &#62; adding features &#38; make it perfect</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="elementInner ShadowBox ">
+            <h4 class="allCaps colorBlack">Flow and layout </h4>
+            <div class="lineHorizS"></div>
+            <div class="blankHXS"></div>
+            <ul>
+              <li> Keep it less and simple, users don't need to spend any effort reading or thinking
+                about how to reach their goals</li>
+              <li> Think about design and flow together when updating the layout. Focus on the
+                information hierarchy. Always make sure Call-To-Action Button is the clearest. and
+                the important contents are secondary. Testing the layout with the flow, not a single
+                screen. </li>
+              <li>Thoughtfully choose UI components, such as card, list, table, accordion, tab, or
+                combinations. Think about the information, what information users want to see, and
+                what information users should see. For example, designing a business profile, with
+                cards including images and descriptions. it will show a lot of information about one
+                item, in comparison the list will show a list of items with less information. Choose
+                the one the business need.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="elementInner ShadowBox ">
+            <h4 class="allCaps colorBlack">Design system </h4>
+            <div class="lineHorizS"></div>
+            <div class="blankHXS"></div>
+
+            <ul>
+              <li>Work with Dev about the responsive grid and break point, understand how current
+                design system</li>
+              <li>Unify the overall margin, padding, and border lines, keep it simple and consistent
+              </li>
+              <li>A limited number of colors and font, primary color with several variants of
+                brightness(a range of similar colors), grey 100-900, may have additional colors.
+              </li>
+
+
+            </ul>
+
+          </div>
+        </div>
+      </div>
+
+
+    </div>
+  </div>
+  <!-- Design principles -->
+ 
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
