--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     <div class="t-intro zTop" data-aos="fade-up">
       <p>
         a <a href="/project/" class="textUnderline">UI&#47;UX</a> designer with an <a
-          href="/project/" class="textUnderline">architectural design </a>background. Passionate
+          href="/architecture/" class="textUnderline">architectural design </a>background. Passionate
         about translating complex business requirements into compelling user experiences.
       </p>
       <p> I built and update this website myself from scratch using HTML/CSS/JS deployed on AWS S3.
