--- a/index.html
+++ b/index.html
@@ -198,7 +198,8 @@
     <div class="t-intro zTop" data-aos="fade-up">
       <p>
         a <a href="/project/" class="textUnderline">UI&#47;UX</a> designer with an <a
-          href="/architecture/" class="textUnderline">architectural design </a>background. Passionate
+          href="/architecture/" class="textUnderline">architectural design </a>background.
+        Passionate
         about translating complex business requirements into compelling user experiences.
       </p>
       <p> I built and update this website myself from scratch using HTML/CSS/JS deployed on AWS S3.
@@ -227,24 +228,36 @@
       </div>
     </div>
     <div class="blankHS"></div>
-    <div class="Grid Grid--gutters Grid--cols-2 ">
+    <div class="Grid Grid--full ">
       <div class="Grid-cell">
         <div class="element">
-          <div class="elementInner ShadowBox heightM">
-            <h4 class=" colorBlack"><span class="allCaps"> web app</span> (SaaS)</h4>
+          <div class="elementInner ShadowBox">
+            <h4 class=" colorBlack"><span class="allCaps"> Business owners&#39; website</span>
+              (SaaS)</h4>
             <div class="lineHorizS"></div>
             <div class="blankHXS"></div>
 
             <ul>
-              <li>Book appointment</li>
-              <li>Services &#38; promotions</li>
+              <li>Book appointment and payment
+                <ul>
+                  <li>Able to add client and pet during book appointment flow</li>
+                  <li>select team members and availability</li>
+                  <li>process payment, and redeem coupons</li>
+                </ul>
+              </li>
+              <li>Services &#38; promotions
+                <ul>
+                  <li>Design creating services flow, able to combine multiple items give a discount
+                    or free service</li>
+
+                </ul>
+              </li>
               <li>Team management
                 <ul>
                   <li>Availability &#38; capacity</li>
-                  <li>Team member account</li>
+                  <li>Team member account including profile, working hours, and integration</li>
                 </ul>
               </li>
-              <li>Payment and tip</li>
               <li>Command center</li>
 
             </ul>
@@ -255,7 +268,7 @@
 
       <div class="Grid-cell">
         <div class="element">
-          <div class="elementInner ShadowBox heightM">
+          <div class="elementInner ShadowBox">
             <h4 class="allCaps colorBlack">End users&#39; website &#38; Mobile app </h4>
             <div class="lineHorizS"></div>
             <div class="blankHXS"></div>
@@ -265,7 +278,7 @@
               <li> Add pets</li>
               <li> Payment</li>
               <li> Notification</li>
-              <li> Responsive design</li>
+              <li> Responsive website design</li>
 
             </ul>
 
@@ -300,10 +313,10 @@
             <div class="blankHXS"></div>
 
             <ul>
-              <li>Ideally, organize the features based on the frequency of use </li>
-              <li>Get rid of redundant flows if have time, keep the most frequently used flow easy
-                to reach and
-                update </li>
+              <li>Organize the features based on the frequency of use. keep the most frequently used
+                flow easy
+                to reach and update </li>
+              <li>Get rid of redundant flows if have time</li>
 
 
             </ul>
@@ -315,15 +328,16 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="elementInner ShadowBox ">
-            <h4 class="allCaps colorBlack">Always willing to improve design quality </h4>
+            <h4 class="allCaps colorBlack">Learning design from observing everyday life. Always
+              willing to think and improve design quality</h4>
             <div class="lineHorizS"></div>
             <div class="blankHXS"></div>
             <ul>
-              <li> keep my design skills updated by observing, discussing, thinking, and doing
+              <li> keep my design skills updated by observing, thinking, and working on design
                 everyday</li>
               <li> Always willing to learn design tools and basic programing language</li>
-
-
+              <li>discussing product strategy, understanding the importance of different types and phases of product</li>
+              <li>Always appreciate straightforward feedback</li>
             </ul>
 
           </div>
@@ -410,7 +424,8 @@
             <div class="lineHorizS"></div>
             <div class="blankHXS"></div>
             <ul>
-              <li> Design MVP, testing, launch, learn from customers &#62; adding features &#38; make it perfect</li>
+              <li> Design MVP, testing, launch, learn from customers &#62; adding features &#38;
+                make it perfect</li>
             </ul>
           </div>
         </div>
@@ -466,7 +481,7 @@
     </div>
   </div>
   <!-- Design principles -->
- 
+
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
