--- a/project/appointa/index.html
+++ b/project/appointa/index.html
@@ -156,6 +156,7 @@
   <div class="colorBgAPPOINTA">
 
     <div class="blankMin1080"></div>
+    <div class="blankMin1880"></div>
 
     <div class="blankHS"></div>
     <div class="Grid Grid--full u-textCenter wrapper">
@@ -384,45 +385,54 @@
           <div class="Grid Grid--full wrapper">
             <div class="Grid-cell">
               <div class="element">
-                <h4>By the Numbers. Average time to-hire across all industries is 3-4 weeks. </h4>
+
+                <h4>The Yello Interview Scheduling Survey </h4>
 
                 <h4 class="leftVerLine APPOINTA"> On average, recruiters are <strong
                     class="textDecor APPOINTA">spending ⅔ of their
                     overall hiring time on the interview process</strong>.</h4>
                 <h4 class="leftVerLine APPOINTA"> 67% of respondents say it takes between <strong
                     class="textDecor APPOINTA">30 minutes and 2 hours</strong> to
-                  schedule a single interview.</h4>
+                  <strong class="textDecor APPOINTA">schedule a single interview</strong>.
+                </h4>
 
-
+                <h4 class="leftVerLine APPOINTA"> 60% of recruiters say that they regularly lose
+                  candidates before they’re able to schedule an interview.</h4>
 
               </div>
             </div>
           </div>
           <!-- Challenge  -->
+          <div class="Grid Grid--full wrapper u-textCenter">
+            <img class="" src="Diagram_1.svg" alt="Diagram">
+          </div>
+
           <!-- Opportunity  -->
           <div class="Grid Grid--full wrapper">
             <div class="Grid-cell">
               <div class="element">
                 <h4>My goal is design a <strong class="textDecor APPOINTA">scheduling
-                    tool</strong>
-                  for company recruiting interviews.
+                    tool</strong> for recruiting interviews.
                   it helps recruiters and hiring managers <strong class="textDecor APPOINTA">arrange
                     and schedule interviews</strong> with less time and effort. </h4>
 
                 <h4 class="leftVerLine APPOINTA">Recruiters and hiring managers usually invite
-                  colleagues to attend interviews. It takes time to <strong
-                    class="textDecor APPOINTA">find</strong>
-                  candidate and colleague's <strong class="textDecor APPOINTA">availability</strong>
+                  colleagues to attend interviews. It takes time to match <strong
+                    class="textDecor APPOINTA">candidate</strong>
+                  and <strong class="textDecor APPOINTA">colleague's availability</strong>
                   in different calendars and apps.</h4>
 
                 <h4 class="leftVerLine APPOINTA">
                   Matching colleagues' <strong class="textDecor APPOINTA">interview
                     skills</strong> to candidate <strong class="textDecor APPOINTA">interview
-                    type</strong> from different team sometimes is a challenge as well.</h4>
+                    type</strong> from different teams sometimes is a challenge as well.</h4>
               </div>
             </div>
           </div>
           <!-- Opportunity  -->
+          <div class="Grid Grid--full wrapper u-textCenter">
+            <img class="" src="Diagram_2.svg" alt="Diagram">
+          </div>
           <div class="blankHS"></div>
 
           <!-- Arrow -->
