--- a/project/seer/index.html
+++ b/project/seer/index.html
@@ -152,6 +152,8 @@
   <!-- Working process -->
   <div class="BGseer1">
     <div class="blankMin1080"></div>
+    <div class="blankMin1880"></div>
+
     <div class="blankHS"></div>
 
 
