--- a/project/appointa/index.html
+++ b/project/appointa/index.html
@@ -390,7 +390,10 @@
 
                 <h4 class="leftVerLine APPOINTA"> On average, recruiters are <strong
                     class="textDecor APPOINTA">spending ⅔ of their
-                    overall hiring time on the interview process</strong>.</h4>
+                    overall hiring time on the interview process</strong>. 67% of respondents say it
+                  takes between 30 minutes and 2 hours to schedule a single interview. For 17%, it
+                  takes two to five hours. 35% of respondents identified scheduling interviews as
+                  the most time-consuming aspect of recruitment. </h4>
                 <h4 class="leftVerLine APPOINTA"> 67% of respondents say it takes between <strong
                     class="textDecor APPOINTA">30 minutes and 2 hours</strong> to
                   <strong class="textDecor APPOINTA">schedule a single interview</strong>.
@@ -416,6 +419,10 @@
                   it helps recruiters and hiring managers <strong class="textDecor APPOINTA">arrange
                     and schedule interviews</strong> with less time and effort. </h4>
 
+                    <img class="" src="Diagram_2.svg" alt="Diagram">
+
+
+
                 <h4 class="leftVerLine APPOINTA">Recruiters and hiring managers usually invite
                   colleagues to attend interviews. It takes time to match <strong
                     class="textDecor APPOINTA">candidate</strong>
@@ -430,9 +437,7 @@
             </div>
           </div>
           <!-- Opportunity  -->
-          <div class="Grid Grid--full wrapper u-textCenter">
-            <img class="" src="Diagram_2.svg" alt="Diagram">
-          </div>
+ 
           <div class="blankHS"></div>
 
           <!-- Arrow -->
