--- a/index.html
+++ b/index.html
@@ -336,7 +336,8 @@
               <li> keep my design skills updated by observing, thinking, and working on design
                 everyday</li>
               <li> Always willing to learn design tools and basic programing language</li>
-              <li>discussing product strategy, understanding the importance of different types and phases of product</li>
+              <li>discussing product strategy, understanding the importance of different types and
+                phases of product</li>
               <li>Always appreciate straightforward feedback</li>
             </ul>
 
@@ -363,35 +364,39 @@
     </div>
     <div class="blankHS"></div>
     <div class="Grid Grid--full">
+
       <div class="Grid-cell">
         <div class="element">
           <div class="elementInner ShadowBox ">
-            <h4 class="allCaps colorBlack">Open to all sizes and all types of company</h4>
-            <div class="lineHorizS"></div>
+            <h4 class="colorBlack">My focus is on building high-quality products that solve
+              real business needs</h4>
+            <div class="lineHorizS"> </div>
             <div class="blankHXS"></div>
 
             <ul>
-              <li>I do not have a strong preference for the company size or industry</li>
-              <li>I am still fairly new in UX design. Looking for the opportunity that I can learn
-                things from the team</li>
-
+              <li>
+                Simple, consider understanding user needs
+              </li>
+              <li>
+                Set up the business goal and product direction based on user's needs, not arbitrary
+              </li>
 
             </ul>
-
           </div>
         </div>
       </div>
-
       <div class="Grid-cell">
         <div class="element">
           <div class="elementInner ShadowBox ">
-            <h4 class="allCaps colorBlack">Clear product visions and goals </h4>
+            <h4 class="colorBlack">I would like work to for a company with a strong product vision
+              and clear business goals</h4>
             <div class="lineHorizS"></div>
             <div class="blankHXS"></div>
             <ul>
-              <li> keep the first version(MVP) simple and easy to use. able to get feedback from
-                customers and iterate </li>
-              <li> Ideally working on a launched product with a certain amount of customers </li>
+              <li>have a product road map that backed by research and data</li>
+              <li>There are strong reasons for pursuing a product direction and business strategy,
+                transparent business metrics to achieve. for example, user acquisition, user
+                engagement, revenue increase, and user satisfaction.</li>
             </ul>
           </div>
         </div>
