--- a/project/seer/index.html
+++ b/project/seer/index.html
@@ -1045,7 +1045,7 @@
 
 
 
-        <section id="hifiWireframes" class="BGseer2_1">
+        <section id="hifiWireframes" class="BGseer0">
           <!-- Arrow -->
           <div class="wrapper">
             <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
@@ -1067,15 +1067,16 @@
               <div class="element">
                 <img class="modal-target" src="Hi-fi_main.svg" alt="Wireframes">
               </div>
+ 
             </div>
           </div>
           <!-- wireframes -->
+          <div class="blankHS"></div>
+
           <div class="Grid Grid--full wrapper">
             <div class="Grid-cell">
               <div class="element">
-                <h4> Hi-fi screen updating </h4>
-
-
+                <img class="modal-target" src="Hi-fi_main_1.svg" alt="Wireframes">
               </div>
             </div>
           </div>
@@ -1097,19 +1098,7 @@
     <hr>
     <div class="blankHM"></div>
 
-    <!-- takeaways -->
-    <div class="wrapper">
-      <div class="Grid Grid--full u-textCenter">
-        <div class="Grid-cell">
-          <h3 class="element">Key takeaways</h3>
-          <h5>Understand users is important for design, in this dashboard design, understanding the
-            way data works is also very important</h5>
-          <h5></h5>
-          <h5></h5>
-        </div>
-      </div>
-    </div>
-    <!-- takeaways -->
+ 
   </main>
   <div class="blankHS"></div>
 
