--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="Grid">
-            <p class="tArrow">WhatI have been working on </p>
+            <p class="tArrow">What I have been working on </p>
             <img class="se-arrow" src="icon/arrow-se.svg" alt="se-arrow">
           </div>
         </div>
@@ -232,7 +232,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="elementInner ShadowBox">
-            <h4 class=" colorBlack"><span class="allCaps"> Business owners&#39; website</span>
+            <h4 class=" colorBlack"><span class=""> Business owners&#39; website</span>
               (SaaS)</h4>
             <div class="lineHorizS"></div>
             <div class="blankHXS"></div>
@@ -269,7 +269,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="elementInner ShadowBox">
-            <h4 class="allCaps colorBlack">End users&#39; website &#38; Mobile app </h4>
+            <h4 class=" colorBlack">End users&#39; website &#38; Mobile app </h4>
             <div class="lineHorizS"></div>
             <div class="blankHXS"></div>
             <ul>
@@ -308,7 +308,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="elementInner ShadowBox ">
-            <h4 class="allCaps colorBlack">Simply flow and features, "less is more"</h4>
+            <h4 class=" colorBlack">Simply flow and features, "less is more"</h4>
             <div class="lineHorizS"></div>
             <div class="blankHXS"></div>
 
@@ -328,7 +328,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="elementInner ShadowBox ">
-            <h4 class="allCaps colorBlack">Learning design from observing everyday life. Always
+            <h4 class=" colorBlack">Learning design from observing everyday life. Always
               willing to think and improve design quality</h4>
             <div class="lineHorizS"></div>
             <div class="blankHXS"></div>
@@ -425,7 +425,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="elementInner ShadowBox ">
-            <h4 class="allCaps colorBlack">Product </h4>
+            <h4 class=" colorBlack">Product </h4>
             <div class="lineHorizS"></div>
             <div class="blankHXS"></div>
             <ul>
@@ -438,7 +438,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="elementInner ShadowBox ">
-            <h4 class="allCaps colorBlack">Flow and layout </h4>
+            <h4 class=" colorBlack">Flow and layout </h4>
             <div class="lineHorizS"></div>
             <div class="blankHXS"></div>
             <ul>
@@ -462,7 +462,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="elementInner ShadowBox ">
-            <h4 class="allCaps colorBlack">Design system </h4>
+            <h4 class=" colorBlack">Design system </h4>
             <div class="lineHorizS"></div>
             <div class="blankHXS"></div>
 
@@ -596,7 +596,7 @@
       <div class="Grid-cell ">
         <div class="element ">
           <div class="elementInner ShadowBox ">
-            <h3 class="allCaps">Creative & Collaborative </h3>
+            <h3 class="">Creative & Collaborative </h3>
 
             <div class="lineHorizS"></div>
             <div class="blankHXS"></div>
@@ -616,7 +616,7 @@
         <div class="element">
           <div class="elementInner ShadowBox ">
 
-            <h3 class="allCaps">Transparency </h3>
+            <h3 class="">Transparency </h3>
             <div class="lineHorizS"></div>
             <div class="blankHXS"></div>
 
