--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
       <div class="Grid-cell">
         <div class="element">
 
-          <a href="/resume.pdf" class="textUnderline">
+          <a href="/resume.pdf" class="textUnderline" target=”_blank”>
             <h4>Download My Resume</h4>
           </a>
         </div>
