--- a/project/index.html
+++ b/project/index.html
@@ -47,17 +47,17 @@
   <link rel="stylesheet" href="../main.css">
   <script type="text/javascript" src="../scripts.js"></script>
   <script type="text/javascript" src="scripts_project.js"></script>
+  <script type="text/javascript" src="../scripts_about.js"></script>
+
 
   <link
     href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
     rel="stylesheet">
   <!--font     font-family: 'Titillium Web', sans-serif; -->
-
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
   <!--font     font-family: 'Roboto', sans-serif; -->
-
   <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
   <!--font using hello-->
   <link
@@ -68,10 +68,13 @@
     href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
     rel="stylesheet">
   <!--font font-family: 'Lato', sans-serif; -->
-
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     rel="stylesheet">
   <!--font awesome -->
+
+
+
+
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"
     integrity="sha512-E8QSvWZ0eCLGk4km3hxSsNmGWbLtSCSUcewDQPQWZF6pEU8GlT8a5fF32wOl1i8ftdMhssTrF/OhyGWwonTcXA=="
@@ -171,11 +174,12 @@
     </div>
     <div class="t-intro zTop" data-aos="fade-up">
       <p>
-        I’m currently a UI/UX Designer on the book appointment & team management ECommerce teams.
-        BookYourPet is a SaaS product aimed at connecting pet owners with pet service providers.
+        I’m currently a UI/UX Designer at BookYourPet and have been working on the book appointment
+        & team management of ECommerce teams.
       </p>
-      <p> I work closely with engineering and management on all phases of the design process.
-        Leading the design of all major features and flows.
+      <p> BYP is a SaaS product aimed at connecting pet owners with pet service providers. I work
+        closely with PM and Devs on all phases of the design process. Leading the
+        design of all major features and flows.
       </p>
     </div>
   </div>
@@ -187,7 +191,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="Grid">
-            <p class="tArrow"> Ongoing Projects</p>
+            <p class="tArrow"> Current Projects</p>
             <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
           </div>
         </div>
@@ -204,7 +208,7 @@
           <div class="element">
 
             <div class="elementCard float cardBorder">
-              <img src="appointa/Thumbnail.svg" alt="Appointa">
+              <img src="/image/Cover_APPOINTA.jpg" alt="Appointa">
               <div class="element">
                 <div class="element">
                   <h5>For scheduling interview</h5>
@@ -223,7 +227,7 @@
           <div class="element">
 
             <div class="elementCard float cardBorder">
-              <img src="../image/Cover_ANARE.jpg" alt="ANARE">
+              <img src="../image/Cover_SEER.jpg" alt="ANARE">
               <div class="element">
                 <div class="element">
                   <h5>For grow business</h5>
